[package]
name = "lunaro-presale"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.10.32"
thiserror = "1.0.30"

[dev-dependencies]
anchor-client = "0.29.0"
tokio = { version = "1", features = ["full"] }

[profile.release]
overflow-checks = true
